--- a/templates/utilities.hpp.in
+++ b/templates/utilities.hpp.in
@@ -30,6 +30,7 @@
 
 namespace @ModelName@_info {
 @particleEnum@
+   extern const unsigned particle_multiplicities[NUMBER_OF_PARTICLES];
    extern const char* particle_names[NUMBER_OF_PARTICLES];
    extern const char* particle_latex_names[NUMBER_OF_PARTICLES];
 }
