Plot SM particle pole masses only if the have been calculated

--- a/templates/utilities.cpp.in
+++ b/templates/utilities.cpp.in
@@ -47,7 +47,10 @@ void @ModelName@_spectrum_plotter::extract_spectrum(const @ModelName@& model)
    spectrum.clear();
    scale = model.get_scale();
 
-@fillSpectrumVector@
+@fillSpectrumVectorWithSusyParticles@
+   if (model.do_calculate_sm_pole_masses()) {
+@fillSpectrumVectorWithSMParticles@
+   }
 }
 
 void @ModelName@_spectrum_plotter::write_to_file(const std::string& file_name) const
