--- a/templates/E6SSM/FlexibleSUSY.m.in
+++ b/templates/E6SSM/FlexibleSUSY.m.in
@@ -69,7 +69,7 @@ BoundaryLowScaleInput={
    {vu, 2 MZDRbar / Sqrt[(GUTNormalization[g1]^2 g1^2 + g2^2)] Sin[ArcTan[TanBeta]]}
 };
 
-InitialGuess = {
+InitialGuessAtLowScale = {
    {vd, SM[vev] Cos[ArcTan[TanBeta]]},
    {vu, SM[vev] Sin[ArcTan[TanBeta]]},
    {vS, vSInput},
@@ -79,3 +79,5 @@ InitialGuess = {
    {BmuPrime, MZ^2},
    {muPrime, MZ}
 };
+
+InitialGuessAtHighScale = {};
