--- a/templates/E6SSM/FlexibleSUSY.m.in
+++ b/templates/E6SSM/FlexibleSUSY.m.in
@@ -18,16 +18,16 @@ DefaultParameterPoint = {
 
 ParametersToSolveTadpoles = { mHd2, mHu2, ms2 };
 
-RenormalizationScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
-RenormalizationScale = Sqrt[M[Su[1]]*M[Su[6]]];
+SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
+SUSYScale = Sqrt[M[Su[1]]*M[Su[6]]];
 
-ConditionGUTscale = g1 == g2;
+HighScale = g1 == g2;
 
 (* GUT conditions CE6SSM *)
 
-BoundaryHighScaleFirstGuess = 1.0 10^16;
+HighScaleFirstGuess = 1.0 10^16;
 
-BoundaryHighScale={
+HighScaleInput={
    {gN, g1},
    {T[Ye], Azero*Ye},
    {T[Yd], Azero*Yd},
@@ -58,13 +58,13 @@ BoundaryHighScale={
    {muPrime, muPrimeInput}
 };
 
-BoundarySUSYScale = {
+SUSYScaleInput = {
     {vS, vSInput}
 };
 
-BoundaryLowScale = MZ;
+LowScale = MZ;
 
-BoundaryLowScaleInput={
+LowScaleInput={
    {vd, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Cos[ArcTan[TanBeta]]},
    {vu, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Sin[ArcTan[TanBeta]]}
 };
