--- a/templates/E6SSM/FlexibleSUSY.m.in
+++ b/templates/E6SSM/FlexibleSUSY.m.in
@@ -18,12 +18,15 @@ DefaultParameterPoint = {
 
 ParametersToSolveTadpoles = { mHd2, mHu2, ms2 };
 
-SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
 SUSYScale = Sqrt[M[Su[1]]*M[Su[6]]];
 
-HighScale = g1 == g2;
+SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
 
-(* GUT conditions CE6SSM *)
+SUSYScaleInput = {
+    {vS, vSInput}
+};
+
+HighScale = g1 == g2;
 
 HighScaleFirstGuess = 1.0 10^16;
 
@@ -58,11 +61,9 @@ HighScaleInput={
    {muPrime, muPrimeInput}
 };
 
-SUSYScaleInput = {
-    {vS, vSInput}
-};
-
 LowScale = MZ;
+
+LowScaleFirstGuess = MZ;
 
 LowScaleInput={
    {vd, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Cos[ArcTan[TanBeta]]},
