--- a/templates/model.hpp.in
+++ b/templates/model.hpp.in
@@ -59,6 +59,7 @@ public:
    virtual std::string name() const;
    virtual int run_to(double scale, double eps = -1.0);
    virtual void print(std::ostream&) const;
+   virtual void set_precision(double);
 
 @massGetters@
 @mixingMatrixGetters@
@@ -82,6 +83,7 @@ private:
    bool throw_on_tachyon;
    bool throw_on_ewsb_fail;
    bool calculate_sm_pole_masses;
+   double precision;
    double ewsb_iteration_precision;
    double mass_iteration_precision;
    static const std::size_t numberOfEWSBEquations = @numberOfEWSBEquations@;
