Make it possible to create shared libraries again.  The following now works:
  ./configure \
    --disable-static-libs \
    --make-lib-cmd="gcc -shared -o" \
    --libext=".so"

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -18,6 +18,7 @@ LOOPTOOLSFLAGS := @LOOPTOOLSFLAGS@
 LOOPTOOLSLIBS  := @LOOPTOOLSLIBS@
 MAKELIB    := @MAKELIB@
 LIBEXT     := @LIBEXT@
+ENABLE_STATIC_LIBS := @ENABLE_STATIC_LIBS@
 VERSION    := @VERSION@
 PKGNAME    := @PKGNAME@
 ALGORITHMS := @ALGORITHMS@
@@ -93,6 +94,7 @@ showbuild:
 	@echo "FFLAGS     = $(FFLAGS)"
 	@echo "MAKELIB    = $(MAKELIB)"
 	@echo "LIBEXT     = $(LIBEXT)"
+	@echo "ENABLE_STATIC_LIBS = $(ENABLE_STATIC_LIBS)"
 	@echo "FLIBS      = $(FLIBS)"
 	@echo "BOOSTTESTLIBS  = $(BOOSTTESTLIBS)"
 	@echo "BOOSTTHREADLIBS  = $(BOOSTTHREADLIBS)"
