--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -21,6 +21,7 @@ LIBEXT     := @LIBEXT@
 ENABLE_STATIC_LIBS := @ENABLE_STATIC_LIBS@
 VERSION    := @VERSION@
 PKGNAME    := @PKGNAME@
+ABSBASEDIR := @ABSBASEDIR@
 ALGORITHMS := @ALGORITHMS@
 MATH       := @MATH@
 
@@ -87,6 +88,7 @@ distclean::
 showbuild:
 	@echo "PKGNAME    = $(PKGNAME)"
 	@echo "VERSION    = $(VERSION)"
+	@echo "ABSBASEDIR = $(ABSBASEDIR)"
 	@echo "CXX        = $(CXX)"
 	@echo "CPPFLAGS   = $(CPPFLAGS)"
 	@echo "CXXFLAGS   = $(CXXFLAGS)"
