--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -84,7 +84,10 @@ clean-dep:
 remove-executables:
 	rm -f $(ALLEXE)
 
-link: remove-executables $(ALLEXE)
+link: remove-executables
+	@ABSBASEDIR=$(CURDIR)
+
+link: $(ALLEXE)
 
 distclean::
 	-rm -f Makefile
