use absolute paths to flexisusy libraries when linking executables
to run dynamically linked executables independent of the working
directory

--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -104,7 +104,7 @@ $(LIB@MODEL@_OBJ) $(LIB@MODEL@_DEP): CPPFLAGS += $(LOOPTOOLSFLAGS)
 endif
 
 $(RUN_@MODEL@_EXE): $(DIR)/run_@MODEL@.o $(LIB@MODEL@) $(LIBFLEXI) $(LIBLEGACY)
-		$(CXX) -o $@ $^ $(GSLLIBS) $(FLIBS) $(LOOPTOOLSLIBS)
+		$(CXX) -o $@ $(abspath $^) $(GSLLIBS) $(FLIBS) $(LOOPTOOLSLIBS)
 
 ALLDEP += $(LIB@MODEL@_DEP)
 ALLLIB += $(LIB@MODEL@)
