Bugfix: ensure that the tree-level masses, which enter the calculation of the one-loop masses, have been calculated using the tree-level EWSB parameters.
The problem was that solve_ewsb_one_loop() modifies Mu and BMu and
calls calculate_DRbar_parameters().  Therefore, after
solve_ewsb_one_loop() has finished, the tree-level spectrum has been
calculated with the one-loop EWSB parameters.

--- a/templates/model.cpp.in
+++ b/templates/model.cpp.in
@@ -352,12 +352,18 @@ void @ModelName@::calculate_spectrum()
    throw_on_tachyon = true;
    throw_on_ewsb_fail = true;
 
-   // tree-level parameters
+   // calculate one-loop EWSB parameters
+   solve_ewsb_one_loop();
+   // save one-loop EWSB parameters
+@saveEwsbOutputParameters@
+
+   // calculate tree-level spectrum (with tree-level EWSB parameters)
    solve_ewsb_tree_level();
    calculate_DRbar_parameters();
 
-   // one-loop level parameters
-   solve_ewsb_one_loop();
+   // restore one-loop EWSB parameters
+@restoreEwsbOutputParameters@
+
    calculate_1loop_masses();
 
    throw_on_tachyon = false;
