Add setter which resets the input parameters of the constraints

--- a/templates/susy_scale_constraint.cpp.in
+++ b/templates/susy_scale_constraint.cpp.in
@@ -74,6 +74,11 @@ void @ModelName@_susy_scale_constraint::set_model(Two_scale_model* model_)
    model = cast_model<@ModelName@>(model_);
 }
 
+void @ModelName@_susy_scale_constraint::set_input_parameters(const @ModelName@_input_parameters& inputPars_)
+{
+   inputPars = inputPars_;
+}
+
 void @ModelName@_susy_scale_constraint::update_scale()
 {
 @calculateScale@
