--- a/templates/low_scale_constraint.hpp.in
+++ b/templates/low_scale_constraint.hpp.in
@@ -35,6 +35,7 @@ public:
    virtual double get_scale() const;
    virtual void set_model(Two_scale_model*);
    double get_initial_scale_guess() const;
+   void set_input_parameters(const @ModelName@_input_parameters&);
 
 private:
    double scale;
