--- a/templates/high_scale_constraint.cpp.in
+++ b/templates/high_scale_constraint.cpp.in
@@ -76,6 +76,12 @@ void @ModelName@_high_scale_constraint::set_input_parameters(const @ModelName@_i
    inputPars = inputPars_;
 }
 
+void @ModelName@_high_scale_constraint::reset()
+{
+   scale = initial_scale_guess;
+   model = NULL;
+}
+
 void @ModelName@_high_scale_constraint::update_scale()
 {
    const double currentScale = model->get_scale();
