--- a/templates/low_scale_constraint.hpp.in
+++ b/templates/low_scale_constraint.hpp.in
@@ -36,6 +36,7 @@ public:
    virtual void set_model(Two_scale_model*);
    double get_initial_scale_guess() const;
    void set_input_parameters(const @ModelName@_input_parameters&);
+   void reset(); ///< reset to initial state
 
 private:
    double scale;
