--- a/templates/low_scale_constraint.hpp.in
+++ b/templates/low_scale_constraint.hpp.in
@@ -29,6 +29,7 @@ class @ModelName@;
 
 class @ModelName@_low_scale_constraint : public Constraint<Two_scale> {
 public:
+   @ModelName@_low_scale_constraint();
    @ModelName@_low_scale_constraint(const @ModelName@_input_parameters&);
    virtual ~@ModelName@_low_scale_constraint();
    virtual void apply();
