--- a/templates/susy_scale_constraint.cpp.in
+++ b/templates/susy_scale_constraint.cpp.in
@@ -31,6 +31,15 @@
 #define BETAPARAMETER(p) beta_functions.get_##p()
 #define BETA(p) beta_##p
 
+@ModelName@_susy_scale_constraint::@ModelName@_susy_scale_constraint()
+   : Constraint<Two_scale>()
+   , model(0)
+   , inputPars()
+{
+@scaleGuess@
+   scale = initial_scale_guess;
+}
+
 @ModelName@_susy_scale_constraint::@ModelName@_susy_scale_constraint(const @ModelName@_input_parameters& inputPars_)
    : Constraint<Two_scale>()
    , model(0)
