--- a/templates/susy_scale_constraint.hpp.in
+++ b/templates/susy_scale_constraint.hpp.in
@@ -28,6 +28,7 @@ class @ModelName@;
 
 class @ModelName@_susy_scale_constraint : public Constraint<Two_scale> {
 public:
+   @ModelName@_susy_scale_constraint();
    @ModelName@_susy_scale_constraint(const @ModelName@_input_parameters&);
    virtual ~@ModelName@_susy_scale_constraint();
    virtual void apply();
